# data-engineering-101

./: .pre-commit-config.yaml  README.md
.devcontainer/: devcontainer.json
.devcontainer/scripts/: setup.sh
.devcontainer/scripts/files/: zshrc_template
.github/: .pre-commit-config.yaml
.github/workflows/: lint.yml
project/dataops/applications/webapp/: main.tf
project/generation/webapp/: docker-compose.yml
project/generation/webapp/app/: .dockerignore  Dockerfile  erd.md  pyproject.toml  requirements.txt
project/generation/webapp/app/src/: app.py  data_generator.py
project/generation/webapp/app/src/sql/: companies.sql  create_company.sql  create_users.sql  locations.sql  products.sql  subscriptions.sql  users.sql
project/generation/webapp/app/src/templates/: index.html
