[tool.poetry]
name = "src"
version = "0.1.0"
description = "web application to simulate data generation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.32"
flask = "^2.2.3"
mypy = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
